# News

./: .gitignore  .gitingnore  README.md  docker-compose.yml  nginx.conf
back/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
back/certs/: jwt-private.pem  jwt-public.pem
back/migrations/: env.py
back/migrations/versions/: 20bc2a9395d5_.py  3b14f394fbfc_.py  a2f03985e8d1_.py  a76a9a2ca99f_.py  d32fa1ea14e2_.py
back/src/: config.py  exceptions.py  logging_config.py  main.py
back/src/adapters/: news_api.py
back/src/adapters/db/: db.py  models.py
back/src/adapters/news/: news_api.py
back/src/adapters/news/schemas/: filter.py  news.py
back/src/adapters/schemas/: filter.py  news.py
back/src/adapters/users/: schemas.py  users.py
back/src/adapters/users/utils/: jwt.py  (+1 more)
back/src/domain/: exceptions.py
back/src/domain/entities/: news.py  news_filters.py  user.py
back/src/domain/port/: email.py  news_api.py  otp.py  users.py
back/src/domain/utils/: otp.py
back/src/drivers/dependencies/: auth.py  cache.py  news_api.py  user.py
back/src/drivers/exception_handlers/: unauthorized.py  unprocessable.py  validation.py
back/src/drivers/routers/: auth.py  news.py  users.py
back/src/infrastructure/: exceptions.py
back/src/use_cases/: action_on_user.py  exceptions.py  get_news.py  news_api.py  user_auth.py  user_news.py  users.py
back/tests/: config.py
back/tests/integration/: test_user_repo_news_filters.py
back/tests/unit/: routers_news.py  test_user_repo.py  user_repo.py
back/tests/utils/: database_helper.py
(+54 files in other folders)
