[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Gazerog <arseni.bertnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiohttp = "^3.12.15"
fastapi = {extras = ["standard"], version = "^0.116.2"}
pydantic-settings = "^2.10.1"
pyjwt = "^2.10.1"
sqlalchemy = "^2.0.43"
bcrypt = "^4.3.0"
asyncpg = "^0.30.0"
alembic = "^1.16.5"
cryptography = "^46.0.1"
redis = "^6.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
